test/invalid_confs/invalid_type2.lua
--ERROR: wrong type of array member
Listen "8080" {
	echo = { 100 },
}
